--- a/fly.toml
+++ b/fly.toml
@@ -3,16 +3,11 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'quiz-app-backend-jp'
-primary_region = 'nrt'
+app = "quiz-app-backend-jp"
+primary_region = "nrt"
 
 [build]
   builder = "paketobuildpacks/builder:base"
-
-[env]
-  FRONTEND_URL = 'https://quiz-frontend.vercel.app'
-  PYTHON_VERSION = '3.9'
-
 
 [http_service]
   internal_port = 80
@@ -20,15 +15,11 @@ primary_region = 'nrt'
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-
-[[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+  processes = ["app"]  # Link the process to the http_service
 
 [mounts]
   source = "quiz_data"
   destination = "/app"
 
 [processes]
-  app = "/app/start.sh"
+  app = "/app/start.sh"  # Define the command to run
