--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Python
 __pycache__/
 *.pyc
 *.pyo
@@ -6,8 +7,36 @@ __pycache__/
 env/
 venv/
 .env
+
+# Node.js dependencies
 node_modules/
+/.pnp
+.pnp.js
+
+# Build directories
 build/
 dist/
-*.sqlite3
-*.db
+
+# Testing
+/coverage
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Vercel
+.vercel
+
+# Allow specific database files
+!quiz.db
+!quizzes.db
+
+# Allow credentials if needed
+!credentials.json  # Uncomment if your app needs credentials.json
