--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,21 @@
 {
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    },
+    {
+      "source": "/:path*",
+      "destination": "/index.html"
+    }
+  ],
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/manifest.json",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "max-age=0, s-maxage=86400"
+          "value": "public, max-age=31536000"
         }
       ]
     }
