--- a/fly.toml
+++ b/fly.toml
@@ -12,9 +12,9 @@ primary_region = "nrt"
 [http_service]
   internal_port = 80
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
 
 [mounts]
   source = "quiz_data"
