Add fly.toml from quiz-frontend with auto_stop_machines = false

--- a/fly.toml
+++ b/fly.toml
@@ -12,9 +12,9 @@ primary_region = "nrt"
 [http_service]
   internal_port = 80
   force_https = true
-  auto_stop_machines = false
-  auto_start_machines = true
-  min_machines_running = 1
+  auto_stop_machines = false  #  Changed from true to keep machines going rather than having slow start up in classes
+  auto_start_machines = true  #  Keep machines going
+  min_machines_running = 1   #  Changed from 0 to keep one machine going, to hopefully have app start faster
 
 [mounts]
   source = "quiz_data"
