Mount quiz_data volume from snapshot

--- a/fly.toml
+++ b/fly.toml
@@ -18,4 +18,4 @@ primary_region = "nrt"
 
 [mounts]
   source = "quiz_data"
-  destination = "/data"
+  destination = "/data"  # updated from snapshot
