--- a/.github/workflows/backup-flydb.yml
+++ b/.github/workflows/backup-flydb.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+    - name: Install Flyctl
+      uses: superfly/flyctl-actions@1.3
 
     - name: Install Fly.io CLI
       run: |
