--- a/.github/workflows/backup-flydb.yml
+++ b/.github/workflows/backup-flydb.yml
@@ -2,7 +2,6 @@ name: Backup Fly.io SQLite DB
 
 on:
   schedule:
-    # Runs daily at 3am JST (18:00 UTC)
     - cron: '0 18 * * *'
   workflow_dispatch:
 
@@ -15,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Flyctl
-      uses: superfly/flyctl-actions@1.3
+      uses: superfly/flyctl-actions/setup-flyctl@v1
 
     - name: Download quiz.db from Fly.io
       env:
