--- a/.github/workflows/backup-flydb.yml
+++ b/.github/workflows/backup-flydb.yml
@@ -1,7 +1,11 @@
 name: Backup Fly.io SQLite DB
 
+permissions:
+  contents: write
+
 on:
   schedule:
+    # Runs daily at 3am JST (18:00 UTC)
     - cron: '0 18 * * *'
   workflow_dispatch:
 
@@ -14,7 +18,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Flyctl
-      uses: superfly/flyctl-actions/setup-flyctl@v1
+      uses: superfly/flyctl-actions@1.3
 
     - name: Download quiz.db from Fly.io
       env:
@@ -30,16 +34,13 @@ jobs:
         exit
         EOF
 
-    - name: Set up GitHub credentials
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-
     - name: Commit and Push Backup
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git add backups/
-        git commit -m "Backup quiz.db at $(date +'%Y-%m-%d-%H%M')"
-        git push
+        git commit -m "Backup quiz.db at $(date +'%Y-%m-%d-%H%M')" || echo "Nothing to commit"
+        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
+        git push origin HEAD:${{ github.ref }}
