--- a/.github/workflows/backup-flydb.yml
+++ b/.github/workflows/backup-flydb.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Flyctl
-      uses: superfly/flyctl-actions@1.3
+      uses: superfly/flyctl-actions/setup-flyctl@v1
 
     - name: Download quiz.db from Fly.io
       env:
