--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ qrcode==7.4.2
 pillow==10.4.0
 pytz==2024.2
 python-dotenv
+pydantic==2.9.2
+pydantic-core==2.23.4 --only-binary :all:  # Use binary-only installation for `pydantic-core`.
