--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,4 @@ pillow==10.4.0
 pytz==2024.2
 python-dotenv
 pydantic==2.9.2
-pydantic-core==2.23.4 --only-binary :all:  # Use binary-only installation for `pydantic-core`.
+pydantic-core==2.23.4
